--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 , "author" : "Thom Blake <thethomblake@gmail.com> (http://thomblake.com)"
 , "description" : "Template engine forked from http://www.yajet.net/"
 , "keywords" : [ "template" ]
-, "version" : "0.0.0"
+, "version" : "0.0.0-1"
 , "repository" :
   { "type" : "git"
   , "url" : "https://github.com/thomblake/yajet.git"
