--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 , "author" : "Thom Blake <thethomblake@gmail.com> (http://thomblake.com)"
 , "description" : "Template engine forked from http://www.yajet.net/"
 , "keywords" : [ "template" ]
-, "version" : "0.0.0-1"
+, "version" : "0.0.1-1"
 , "repository" :
   { "type" : "git"
   , "url" : "https://github.com/thomblake/yajet.git"
   }
 , "bugs" :
-  { "web" : "http://github.com/thomblake/yajet/issues"
+  { "url" : "http://github.com/thomblake/yajet/issues"
   }
 }
